realised sign up needs to exist, put it on login page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,3 +15,16 @@
       </form>
     </div>
   </div>
+  <div class="col-md-6 col-md-offset-3">
+    <h2>Don't have an account? Sign up!</h2>
+    <form class="signup-form">
+        <label>Username</label>
+        <input type="text" class="form-control" id="username" name="username" required>
+        <label>Email</label>
+        <input type="email" class="form-control" id="email" name="email" required>
+        <label>Password</label>
+        <input type="password" class="form-control" id="password" name="password" required>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
+
+<script src="../public/js/login.js"></script>
