--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,47 +1,38 @@
-<div class="row mb-4">
-    <div class="col-md-12 d-flex justify-content-between align-items-center primary">
-        <h2>
-            <a class="text-color" href="/post/{{post.id}}">{{post.title}}</a>
+<div class="post-container">
+    <div class="post-header">
+        <h2 class="post-title">
+            <a href="/post/{{post.id}}">{{post.title}}</a>
         </h2>
-        <p class="float-right">Posted by {{post.user.name}} on {{format_date post.date_created}}</p>
+        <p class="post-info">Posted by {{post.user.name}} on {{format_date post.date_created}}</p>
     </div>
-    <div class="col-md-12">
-        <p>
-            {{post.content}}
-        </p>
+    <div class="post-content">
+        <p>{{post.content}}</p>
     </div>
-</div>
 
-{{!-- Display comments beneath post --}}
-<div class="row mb-4 card border-dark">
-    <div class="col-md-12 d-flex justify-content-between align-items-center primary">
-        <h2>
-            Comments
-        </h2>
-    </div>
-    <div class="col-md-12">
+    <div class="comments-section">
+        <h2>Comments</h2>
         {{#each post.comments as |comment|}}
-        <div class="card m-1 p-2">
-            <p>{{comment.content}}</p>
-            <p>- {{comment.user.name}} {{format_date comment.date_created}}</p>
-        </div>
+            <div class="comment">
+                <p>{{comment.content}}</p>
+                <p>- {{comment.user.name}} {{format_date comment.date_created}}</p>
+            </div>
         {{/each}}
         {{#if logged_in}}
-        <button id="commentButton" class="primary m-2">New Comment</button>
+            <button id="commentButton" class="btn btn-primary">New Comment</button>
 
-        <div id="commentModal" class="modal">
-            <div class="modal-content">
-                <span id="commentModalClose" class="close">&times;</span>
-                <form class="mx-auto post-form">
-                    <label>Enter Comment:</label>
-                    <p id="currentPost" class="d-none">{{post.id}}</p>
-                    <input type="text" id="add-comment" class="form-control mb-2">
-                    <input type="submit" value="Create" class="btn btn-primary mb-3" id="newCommentButton">
-                </form>
+            <div id="commentModal" class="modal">
+                <div class="modal-content">
+                    <span id="commentModalClose" class="close">&times;</span>
+                    <form class="post-form">
+                        <label>Enter Comment:</label>
+                        <p id="currentPost" class="d-none">{{post.id}}</p>
+                        <input type="text" id="add-comment" class="form-control mb-2">
+                        <input type="submit" value="Create" class="btn btn-primary mb-3" id="newCommentButton">
+                    </form>
+                </div>
             </div>
-        </div>
         {{/if}}
     </div>
 </div>
 
-<script src="/post.js"></script>
+<script src="../../public/js/post.js"></script>
