--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,33 +1,28 @@
-<div class="col-md-12">
-    <h3 class="mb-4">My Posts:</h3>
-    {{!-- display posts made by logged in user --}}
+<div class="profile-posts">
+    <h3 class="profile-heading">My Posts:</h3>
     {{#each posts as |post|}}
-    <div class="row mb-4 card">
-        <div class="col-md-12 d-flex justify-content-between align-items-center">
-            <h2>
+    <div class="post-container">
+        <div class="post-header">
+            <h2 class="post-title">
                 <a href="/post/{{post.id}}">{{post.title}}</a>
             </h2>
-            <p class="float-right">
-                Posted on {{format_date post.date_created}}
-                {{!-- ability to edit/delete posts --}}
-                <button class="ml-2 mt-1 edit-button" data-post-id="{{post.id}}">Edit</button>
-                <button class="delete ml-2 mt-1 delete-button" data-id="{{post.id}}">Delete</button>
-            </p>
+            <p class="post-info">Posted on {{format_date post.date_created}}</p>
+            <div class="post-actions">
+                <button class="edit-button" data-post-id="{{post.id}}">Edit</button>
+                <button class="delete-button" data-id="{{post.id}}">Delete</button>
+            </div>
         </div>
-        <div class="col-md-12">
-            <p>
-                {{post.content}}
-            </p>
+        <div class="post-content">
+            <p>{{post.content}}</p>
         </div>
     </div>
     {{/each}}
-    <button id="new-button">New Post</button>
+    <button id="new-button" class="btn btn-primary">New Post</button>
 
-    <!-- Create Post Modal -->
     <div id="createPostModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <form class="mx-auto post-form">
+            <form class="post-form">
                 <label>Title</label>
                 <input type="text" id="title-post" class="form-control mb-2">
                 <label>Content</label>
@@ -37,11 +32,10 @@
         </div>
     </div>
 
-    <!-- Edit Post Modal -->
     <div id="editPostModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <form class="mx-auto post-form">
+            <form class="post-form">
                 <label>Edit Title</label>
                 <input type="text" id="edit-title-post" class="form-control mb-2">
                 <label>Edit Content</label>
@@ -50,7 +44,6 @@
             </form>
         </div>
     </div>
-
 </div>
 
-<script src="/profile.js"></script>
+<script src="../../public/js/profile.js"></script>
