--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -3,7 +3,7 @@
     <h2 class="post-title">
         <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
-    <p class="post-info"> Posted by {{post.user.username}} on {{format_date post.date_created}}</p>
+    <p class="post-info"> Posted by {{post.user.username}} on {{post.date_created}}</p>
     <div class="post-content">
         <p>{{post.content}}</p>
     </div>
