--- a/views/post.hbs
+++ b/views/post.hbs
@@ -3,7 +3,8 @@
         <h2 class="post-title">
             <a href="/post/{{post.id}}">{{post.title}}</a>
         </h2>
-        <p class="post-info">Posted by {{post.user.name}} on {{format_date post.date_created}}</p>
+        <!-- Remove the format_date helper usage -->
+        <p class="post-info">Posted by {{post.user.name}} on {{post.date_created}}</p>
     </div>
     <div class="post-content">
         <p>{{post.content}}</p>
@@ -14,7 +15,8 @@
         {{#each post.comments as |comment|}}
             <div class="comment">
                 <p>{{comment.content}}</p>
-                <p>- {{comment.user.name}} {{format_date comment.date_created}}</p>
+                <!-- Remove the format_date helper usage -->
+                <p>- {{comment.user.name}} {{comment.date_created}}</p>
             </div>
         {{/each}}
         {{#if logged_in}}
