--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,12 +1,19 @@
-{{#each posts as |post|}}
-  <div class="post-container">
-    <h2 class="post-title">
-        <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p class="post-info"> Posted by {{post.user.username}} on {{post.date_created}}</p>
-    <div class="post-content">
-        <p>{{post.content}}</p>
-    </div>
-  </div>
-{{/each}}
+{{!-- Display all posts on the homepage --}}
+    {{#each posts as |post|}}
+         <div class="post-container mb-4 card border-dark">
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-between align-items-center primary">
+                    <h2>
+                        <a class="text-color" href="/post/{{post.id}}">{{post.title}}</a>
+                    </h2>
+                    <p class="float-right">Posted by {{post.user.username}} on {{post.date_created}}</p>
+                </div>
+                    <div class="col-md-12">
+                        <p>{{post.content}}</p>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
 
+{{!-- Your script --}}
+<script src="/homepage.js"></script>
