--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,31 +1,43 @@
-<div class="post-container">
-    <div class="post-header">
-        <h2 class="post-title">
-            <a href="/post/{{post.id}}">{{post.title}}</a>
-        </h2>
-        <!-- Remove the format_date helper usage -->
-        <p class="post-info">Posted by {{post.user.name}} on {{post.date_created}}</p>
-    </div>
-    <div class="post-content">
-        <p>{{post.content}}</p>
-    </div>
+{{!-- Use extend to inherit the main layout --}}
+{{extend "main"}}
 
-    <div class="comments-section">
-        <h2>Comments</h2>
-        {{#each post.comments as |comment|}}
-            <div class="comment">
+{{!-- Define the content for this page --}}
+{{#content "body"}}
+    {{!-- Your post content here --}}
+    <div class="row mb-4 card border-dark">
+        <div class="col-md-12 d-flex justify-content-between align-items-center primary">
+            <h2>
+                <a class="text-color" href="/post/{{post.id}}">{{post.title}}</a>
+            </h2>
+            <p class="float-right">Posted by {{post.user.name}} on {{post.date_created}}</p>
+        </div>
+        <div class="col-md-12">
+            <p>
+                {{post.content}}
+            </p>
+        </div>
+    </div>
+    <!-- Display comments beneath post -->
+    <div class="row mb-4 card border-dark">
+        <div class="col-md-12 d-flex justify-content-between align-items-center primary">
+            <h2>
+                Comments
+            </h2>
+        </div>
+        <div class="col-md-12">
+            {{#each post.comments as |comment|}}
+            <div class="card m-1 p-2 border-dark">
                 <p>{{comment.content}}</p>
-                <!-- Remove the format_date helper usage -->
                 <p>- {{comment.user.name}} {{comment.date_created}}</p>
             </div>
-        {{/each}}
-        {{#if logged_in}}
-            <button id="commentButton" class="btn btn-primary">New Comment</button>
+            {{/each}}
+            {{#if logged_in}}
+            <button id="comment-button" class="primary m-2">New Comment</button>
 
-            <div id="commentModal" class="modal">
+            <div id="createCommentModal" class="modal">
                 <div class="modal-content">
-                    <span id="commentModalClose" class="close">&times;</span>
-                    <form class="post-form">
+                    <span class="close">&times;</span>
+                    <form class="mx-auto post-form">
                         <label>Enter Comment:</label>
                         <p id="currentPost" class="d-none">{{post.id}}</p>
                         <input type="text" id="add-comment" class="form-control mb-2">
@@ -33,8 +45,10 @@
                     </form>
                 </div>
             </div>
-        {{/if}}
+            {{/if}}
+        </div>
     </div>
-</div>
+{{/content}}
 
-<script src="../../public/js/post.js"></script>
+<script src="/post.js"></script>
+
