--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,28 +1,38 @@
-<div class="profile-posts">
-    <h3 class="profile-heading">My Posts:</h3>
+{{!-- Use extend to inherit the main layout --}}
+{{extend "main"}}
+
+{{!-- Define the content for this page --}}
+{{#content "body"}}
+<div class="col-md-12">
+    <h3 class="mb-4">My Posts:</h3>
+    {{!-- display posts made by logged in user --}}
     {{#each posts as |post|}}
-    <div class="post-container">
-        <div class="post-header">
-            <h2 class="post-title">
-                <a href="/post/{{post.id}}">{{post.title}}</a>
+    <div class="row mb-4 card border-dark">
+        <div class="col-md-12 d-flex justify-content-between align-items-center primary">
+            <h2>
+                <a class="text-color" href="/post/{{post.id}}">{{post.title}}</a>
             </h2>
-            <p class="post-info">Posted on {{format_date post.date_created}}</p>
-            <div class="post-actions">
-                <button class="edit-button" data-post-id="{{post.id}}">Edit</button>
-                <button class="delete-button" data-id="{{post.id}}">Delete</button>
-            </div>
+            <p class="float-right">
+                Posted on {{post.date_created}}
+                {{!-- ability to edit/delete posts --}}
+                <button class="primary ml-2 mt-1 edit-button" data-post-id="{{post.id}}">Edit</button>
+                <button class="delete ml-2 mt-1 delete-button" data-id="{{post.id}}">Delete</button>
+            </p>
         </div>
-        <div class="post-content">
-            <p>{{post.content}}</p>
+        <div class="col-md-12">
+            <p>
+                {{post.content}}
+            </p>
         </div>
     </div>
     {{/each}}
-    <button id="new-button" class="btn btn-primary">New Post</button>
+    <button id="new-button" class="primary">New Post</button>
 
+    <!-- Create Post Modal -->
     <div id="createPostModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <form class="post-form">
+            <form class="mx-auto post-form">
                 <label>Title</label>
                 <input type="text" id="title-post" class="form-control mb-2">
                 <label>Content</label>
@@ -32,10 +42,11 @@
         </div>
     </div>
 
+    <!-- Edit Post Modal -->
     <div id="editPostModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <form class="post-form">
+            <form class="mx-auto post-form">
                 <label>Edit Title</label>
                 <input type="text" id="edit-title-post" class="form-control mb-2">
                 <label>Edit Content</label>
@@ -45,5 +56,7 @@
         </div>
     </div>
 </div>
+{{/content}}
 
-<script src="../../public/js/profile.js"></script>
+{{!-- Your script --}}
+<script src="/profile.js"></script>
