--- a/views/post.hbs
+++ b/views/post.hbs
@@ -32,11 +32,11 @@
             </div>
             {{/each}}
             {{#if logged_in}}
-            <button id="comment-button" class="primary m-2">New Comment</button>
+            <button id="commentButton" class="primary m-2">New Comment</button>
 
             <div id="createCommentModal" class="modal">
                 <div class="modal-content">
-                    <span class="close">&times;</span>
+                    <span class="commentModalClose">&times;</span>
                     <form class="mx-auto post-form">
                         <label>Enter Comment:</label>
                         <p id="currentPost" class="d-none">{{post.id}}</p>
