--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -31,7 +31,7 @@
     <!-- Create Post Modal -->
     <div id="createPostModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="commentModalClose">&times;</span>
             <form class="mx-auto post-form">
                 <label>Title</label>
                 <input type="text" id="title-post" class="form-control mb-2">
@@ -45,7 +45,7 @@
     <!-- Edit Post Modal -->
     <div id="editPostModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="commentModalClose">&times;</span>
             <form class="mx-auto post-form">
                 <label>Edit Title</label>
                 <input type="text" id="edit-title-post" class="form-control mb-2">
