--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,3 @@
-{{!-- Display login and signup forms --}}
 <div class="container mt-5">
     <div class="row mx-auto">
         <div class="col-md-12 col-lg-6">
@@ -18,7 +17,7 @@
                 <h1 class="mx-auto pt-3">Sign Up</h1>
                 <form class="mx-auto signup-form">
                     <label>Name</label>
-                    <input type="text" id="name-signup" class="form-control mb-2" name="username" required>
+                    <input type="text" id="name-signup" class="form-control mb-2" name="name" required>
                     <label>Email</label>
                     <input type="text" id="email-signup" class="form-control mb-2" name="email" required>
                     <label>Password</label>
@@ -30,4 +29,4 @@
     </div>
 </div>
 
-<script src="/login.js"></script>
+<script src="../public/login.js"></script>
