--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,11 +1,9 @@
-{{!-- Use extend to inherit the main layout --}}
 {{extend "main"}}
 
-{{!-- Define the content for this page --}}
 {{#content "body"}}
 <div class="col-md-12">
     <h3 class="mb-4">My Posts:</h3>
-    {{!-- display posts made by logged in user --}}
+
     {{#each posts as |post|}}
     <div class="row mb-4 card border-dark">
         <div class="col-md-12 d-flex justify-content-between align-items-center primary">
@@ -14,7 +12,7 @@
             </h2>
             <p class="float-right">
                 Posted on {{post.date_created}}
-                {{!-- ability to edit/delete posts --}}
+
                 <button class="primary ml-2 mt-1 edit-button" data-post-id="{{post.id}}">Edit</button>
                 <button class="delete ml-2 mt-1 delete-button" data-id="{{post.id}}">Delete</button>
             </p>
@@ -28,10 +26,9 @@
     {{/each}}
     <button id="new-button" class="primary">New Post</button>
 
-    <!-- Create Post Modal -->
     <div id="createPostModal" class="modal">
         <div class="modal-content">
-            <span class="commentModalClose">&times;</span>
+            <span class="close">&times;</span>
             <form class="mx-auto post-form">
                 <label>Title</label>
                 <input type="text" id="title-post" class="form-control mb-2">
@@ -42,10 +39,9 @@
         </div>
     </div>
 
-    <!-- Edit Post Modal -->
     <div id="editPostModal" class="modal">
         <div class="modal-content">
-            <span class="commentModalClose">&times;</span>
+            <span class="close">&times;</span>
             <form class="mx-auto post-form">
                 <label>Edit Title</label>
                 <input type="text" id="edit-title-post" class="form-control mb-2">
@@ -56,7 +52,5 @@
         </div>
     </div>
 </div>
-{{/content}}
 
-{{!-- Your script --}}
-<script src="/profile.js"></script>
+<script src="../public/profile.js"></script>
