--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>A Tech Blog</title>
-        <link rel="stylesheet" href="../../public/styles.css" />
+        <link rel="stylesheet" href="../../public/css/styles.css" />
     </head>
 
     <body class="secondary">
@@ -28,7 +28,7 @@
         <main class="container secondary">{{{ body }}}</main>
 
         {{#if logged_in}}
-        <script src="/logout.js"></script>
+        <script src="../../public/js/logout.js"></script>
         {{/if}}
     </body>
 </html>
